tests/vendor/valid/simple/use_val_in_own_init.c
//expect 0
//tags: simple, assignment, variables
int main() {
    int a = 0 && a;
    return a;
}