tests/vendor/invalid/semantics/undeclared_var_and.c
//tags: simple, binary, logical, undeclared
int main() {
    return 0 && a;
}